horizontal scroll fixed #1

--- a/01-recut/assets/style.css
+++ b/01-recut/assets/style.css
@@ -35,6 +35,10 @@ html {
 	-webkit-text-size-adjust: 100%; /* 2 */
 }
 
+img { 
+	width: 100%;
+}
+
 /*
 Sections
 ========
